# examples

./: .gitignore  LICENSE  README.md
basic-agent/: .env.example  README.md  demo.py  pyproject.toml
langchain-agent-observations/: README.md  pyproject.toml
langchain-agent-observations/app/: agent.py  demo.py  env.py  mcp_tools.py
movie-recommendation/: README.md
movie-recommendation/backend/: Dockerfile  README.md  pyproject.toml
movie-recommendation/backend/app/: agent.py  main.py  schemas.py
movie-recommendation/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
movie-recommendation/frontend/src/: App.tsx  index.css
movie-recommendation/frontend/src/api/: chat.ts
movie-recommendation/frontend/src/components/: MarkdownBody.tsx
movie-recommendation/frontend/src/components/chat/: AssistantAvatar.tsx  AssistantIntro.tsx  AssistantMarkdown.tsx  ChatComposer.tsx  LandingPage.tsx  MessageList.tsx  assistant.ts
movie-recommendation/frontend/src/components/ui/: button.tsx  card.tsx  textarea.tsx
movie-recommendation/local/: .env.example  .gitignore  docker-compose.yml  start.sh
openai-agents-sdk/: .env.example  README.md  pyproject.toml
openai-agents-sdk/app/: demo.py  env.py  mcp_server.py  prompts.py
pydantic-ai-agent/: README.md  pyproject.toml
pydantic-ai-agent/app/: agent.py  demo.py  env.py
