[project]
name = "langchain-agent-observations"
version = "0.1.0"
description = "LangChain agent posting Correl8 observations via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
