[project]
name = "pydantic-ai-agent"
version = "0.1.0"
description = "Pydantic AI agent posting Correl8 observations via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.105.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
