[project]
name = "movie-recommendation-backend"
version = "0.1.0"
description = "Movie recommendation demo backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-ai>=1.105.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.49.0",
]
